--- a/package.json
+++ b/package.json
@@ -12,10 +12,18 @@
     "@types/react-dom": "^17.0.11",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-query": "^3.33.1",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
     "typescript": "^4.4.4",
     "web-vitals": "^1.1.2"
+  },
+  "devDependencies": {
+    "@types/react-query": "^1.2.9",
+    "@types/react-router-dom": "^5.3.2",
+    "@types/styled-components": "^5.1.15",
+    "prettier": "^2.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,9 +48,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/styled-components": "^5.1.15",
-    "prettier": "^2.4.1"
   }
 }
