--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.20.2",
     "react-query": "^3.33.4",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
