--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@craco/craco": "^6.4.3",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -11,6 +12,7 @@
     "@types/react": "^17.0.35",
     "@types/react-dom": "^17.0.11",
     "apexcharts": "^3.30.0",
+    "framer-motion": "^5.5.5",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-beautiful-dnd": "^13.1.0",
@@ -34,9 +36,9 @@
     "prettier": "^2.4.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
