--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-apexcharts": "^1.3.9",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
-    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^1.2.2",
     "react-hook-form": "^7.20.2",
     "react-query": "^3.33.4",
     "react-router-dom": "^5.3.0",
@@ -29,7 +29,7 @@
   },
   "devDependencies": {
     "@types/react-beautiful-dnd": "^13.1.2",
-    "@types/react-helmet": "^6.1.4",
+    "@types/react-helmet-async": "^1.0.3",
     "@types/react-query": "^1.2.9",
     "@types/react-router-dom": "^5.3.2",
     "@types/styled-components": "^5.1.15",
